--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,20 +2,35 @@
 name = "cargo-rename"
 version = "0.1.0"
 edition = "2024"
+authors = ["Nelson Dominguez <ekkolon@proton.me>"]
+description = "Safely rename Cargo packages and update all workspace references"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/ekkolon/cargo-rename"
+keywords = ["cargo", "rename", "refactor", "workspace"]
+categories = ["command-line-utilities", "development-tools::cargo-plugins"]
+
+[[bin]]
+name = "cargo-rename"
+path = "src/main.rs"
 
 [dependencies]
-clap = { version = "4.5", features = ["derive", "cargo"] }
-cargo_metadata = "0.23"
-toml_edit = "0.23"
 anyhow = "1.0"
-colored = "3.0"
-camino = "1.1"                                             # For Utf8PathBuf compatibility with cargo_metadata
-fs_extra = "1.3"
+cargo_metadata = "0.23"
+clap = { version = "4.5", features = ["derive"] }
+colored = "3.1"
+env_logger = "0.11"
+log = "0.4"
 pathdiff = "0.2"
 regex = "1.10"
-walkdir = "2.4"
+thiserror = "2.0"
+toml_edit = "0.23.9"
+walkdir = "2.5"
 
 [dev-dependencies]
-tempfile = "3.8"
-assert_cmd = "2.0"
-predicates = "3.0"
+assert_cmd = "2.1"
+predicates = "3.1"
+tempfile = "3.10"
+
+
+[lints.rust]
+unsafe_code = { level = "forbid" }
