--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,5 +84,7 @@ jobs:
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/**/*
+          files: |
+            dist/*.tar.gz
+            dist/*.zip
           generate_release_notes: true
