--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,15 @@ anyhow = "1.0"
 cargo_metadata = "0.23"
 clap = { version = "4.5", features = ["derive"] }
 colored = "3.1"
-env_logger = "0.11"
 log = "0.4"
 pathdiff = "0.2"
 regex = "1.10"
 thiserror = "2.0"
 toml_edit = "0.23.9"
 walkdir = "2.5"
+syn = { version = "2", features = ["full", "visit-mut"] }
+prettyplease = "0.2"
+ignore = "0.4"
 
 [dev-dependencies]
 assert_cmd = "2.1"
