ci: trigger release on tag push

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     workflows: ["CI"]
     types:
       - completed
+  push:
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: write
@@ -12,7 +15,7 @@ permissions:
 jobs:
   build:
     name: Build (${{ matrix.target }})
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: github.event_name == 'push' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
