--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,6 @@ jobs:
             publish \
             --workspace \
             --all-features \
-            --allow-branch HEAD \
+            --allow-branch main \
             --no-confirm \
             --execute
