fix: duplicate raw binary copies causes release job to fail

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,10 +47,11 @@ jobs:
           BIN_NAME=cargo-rename
           TARGET=${{ matrix.target }}
           VERSION=${GITHUB_REF_NAME}
-          mkdir -p dist
-          cp target/$TARGET/release/$BIN_NAME dist/
-          cd dist
-          tar czf $BIN_NAME-$VERSION-$TARGET.tar.gz $BIN_NAME
+          DIST=dist/$TARGET
+          mkdir -p $DIST
+          cp target/$TARGET/release/$BIN_NAME $DIST/$BIN_NAME-$TARGET
+          cd $DIST
+          tar czf $BIN_NAME-$VERSION-$TARGET.tar.gz $BIN_NAME-$TARGET
 
       - name: Package Windows
         if: runner.os == 'Windows'
@@ -59,10 +60,10 @@ jobs:
           $Bin = "cargo-rename.exe"
           $Version = "${{ github.ref_name }}"
           $Target = "${{ matrix.target }}"
-          $Dist = "dist"
+          $Dist = "dist\$Target"
           New-Item -ItemType Directory -Force -Path $Dist
-          Copy-Item "target/$Target/release/$Bin" -Destination $Dist
-          Compress-Archive -Path "$Dist\$Bin" -DestinationPath "$Dist/cargo-rename-$Version-$Target.zip"
+          Copy-Item "target/$Target/release/$Bin" -Destination "$Dist\$Bin-$Target"
+          Compress-Archive -Path "$Dist\$Bin-$Target" -DestinationPath "$Dist\cargo-rename-$Version-$Target.zip"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v6
