chore: simplify cargo-release toml

--- a/release.toml
+++ b/release.toml
@@ -1,23 +1,6 @@
 allow-branch = ["main"]
-
-sign-commit = true
-sign-tag = true
-
-release = true
-
-shared-version = false
-dependent-version = "upgrade"
-metadata = "optional"
-
-consolidate-commits = true
-pre-release-replacements = []
-pre-release-commit-message = "chore: release v{{version}}"
-
-tag = true
-tag-message = "chore: release v{{version}}"
-tag-name = "v{{version}}"
-
-push = true
-push-remote = "origin"
-
 publish = false
+sign-tag = true
+sign-commit = true
+tag = true
+tag-message = "chore: release {{crate_name}} version {{version}}"
