--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,19 +15,19 @@ name = "cargo-rename"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0"
+anyhow = "1"
 cargo_metadata = "0.23"
 clap = { version = "4.5", features = ["derive", "wrap_help"] }
 colored = "3.1"
 log = "0.4"
 pathdiff = "0.2"
-regex = "1.10"
+regex = "1.12"
 thiserror = "2.0"
 toml_edit = "0.23.9"
-walkdir = "2.5"
 syn = { version = "2", features = ["full", "visit-mut"] }
-prettyplease = "0.2"
 ignore = "0.4"
+clap-cargo = "0.18.3"
+env_logger = "0.11.8"
 
 [dev-dependencies]
 assert_cmd = "2.1"
