refactor: update docs and rename ambigious `yes` field to `skip_confirmation`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 edition = "2024"
 rust-version = "1.86"
 authors = ["Nelson Dominguez <ekkolon@proton.me>"]
-description = "Rename Cargo packages with confidence"
+description = "Perform a coordinated, all-or-nothing rename of a Cargo package"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/ekkolon/cargo-rename"
 documentation = "https://docs.rs/cargo-rename"
